# module-2-stream-quotation

./: Cargo.toml  README.md
docs/: protocol.md
quote_app/: Cargo.toml
quote_app/src/: client.rs  error.rs  parsecli.rs  quote.rs  server.rs
quote_app/src/error/: clienterror.rs  servererror.rs
quote_app/src/quote/: quote_stream.rs  volume_generator.rs
quote_client/: Cargo.toml
quote_client/src/: client.rs  error.rs  main.rs
quote_lib/: Cargo.toml
quote_lib/src/: errors.rs  lib.rs  quote.rs
quote_lib/src/quote/: stockquote.rs
quote_server/: Cargo.toml
quote_server/src/: error.rs  generator.rs  main.rs  quote.rs  server.rs
quote_server/src/generator/: volume_generator.rs
quote_server/src/quote/: quote_stream.rs  volume_generator.rs
sq-client/: Cargo.toml
tickers/: tickers_request_1.txt
tickets/: tickers_request.txt
