[package]
name = "quote-app"
version = "0.1.0"
edition = "2024"

[features]
server=[]
client=[]

[dependencies]
crossbeam-channel="0.5"
quote-lib ={path = "../quote_lib"}
rand = "0.9"
thiserror = "2.0"
socket2 = "0.6"
clap = { version ="4.5" , features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[[bin]]
name = "quote-server"
path = "bin/quote-server.rs"


[[bin]]
name = "quote-client"
path = "bin/quote-client.rs"
